--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name=".ActualizarFruta"
             android:parentActivityName=".Listado" />
-        <activity android:name=".Listado" />
+        <activity android:name=".Listado"
+            android:noHistory="true"/>
         <activity
             android:name=".Registro"
             android:parentActivityName=".MainActivity" /> <!-- <activity android:name=".MainActivity"> -->
@@ -32,9 +33,10 @@
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
         <!-- </intent-filter> -->
         <!-- </activity> -->
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" android:noHistory="true" />
         <activity
             android:name=".Splash"
+            android:noHistory="true"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
